# pr-artifact-skills

./: .gitignore  AGENTS.md  Makefile  README.md  devenv.nix  pyproject.toml
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
assets/: demo.tape
examples/: minio.pr-artifacts.yaml  oci.pr-artifacts.yaml  rustfs.pr-artifacts.yaml
lib/python/pr_artifacts/: __init__.py  oos_cli.py  publish_pr_artifact.py
scripts/: demo.sh  package-release.sh  render-demo-gif.sh  validate-plugin.sh
skills/pr-add-artifact/: SKILL.md
skills/pr-add-artifact/agents/: openai.yaml
skills/pr-add-artifact/scripts/: config_file.py  object_store.py  oos_cli.py  publish_pr_artifact.py  test_publish_pr_artifact.py
skills/pr-add-sbom/: SKILL.md
skills/pr-add-sbom/agents/: openai.yaml
skills/pr-add-screenshot/: SKILL.md
skills/pr-add-screenshot/agents/: openai.yaml
skills/pr-add-test-report/: SKILL.md
skills/pr-add-test-report/agents/: openai.yaml
tests/: test_minio_integration.py  test_publish_pr_artifact.py
